fixed spacing in mobile for translate button

--- a/wp/wp-content/themes/phila.gov-theme/css/scss/base/_global-nav.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/base/_global-nav.scss
@@ -217,6 +217,10 @@
                   text-transform: capitalize;
                   font-family: "Montserrat","Tahoma",sans-serif;
                     
+                  @include breakpoint(small only) {
+                    padding-left: 1rem; 
+                  }
+
                   &:before{
                     margin-right: 4px;
                     font: var(--fa-font-solid);
